// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CartSummarySection stories snapshot > DesktopEmptyCart story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="space-y-5"
        data-testid="sf-order-summary"
      >
        <h3
          class="text-xl font-semibold tracking-tight text-left"
          id="order-summary-heading"
        >
          Summary
        </h3>
        <div
          aria-labelledby="order-summary-heading"
          class="space-y-4"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-_r_1_"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-_r_0_"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-base text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    0 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-_r_0_"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-_r_1_"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-4 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                $0.00
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-primary font-medium"
              >
                FREE
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span>
                $0.00
              </span>
            </div>
          </div>
          <div
            class="space-y-4 w-full text-sm"
          >
            <div
              class="flex w-full justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Order Total
              </span>
              <span
                class="font-bold"
              >
                $0.00
              </span>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > DesktopMultipleItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="space-y-5"
        data-testid="sf-order-summary"
      >
        <h3
          class="text-xl font-semibold tracking-tight text-left"
          id="order-summary-heading"
        >
          Summary
        </h3>
        <div
          aria-labelledby="order-summary-heading"
          class="space-y-4"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-_r_5_"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-_r_4_"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-base text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    3 items in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-_r_4_"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-_r_5_"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-4 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                $73.57
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
          </div>
          <div
            class="space-y-4 w-full text-sm"
          >
            <div
              class="flex w-full justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Order Total
              </span>
              <span
                class="font-bold"
              >
                $73.57
              </span>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > DesktopWithItems story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="space-y-5"
        data-testid="sf-order-summary"
      >
        <h3
          class="text-xl font-semibold tracking-tight text-left"
          id="order-summary-heading"
        >
          Summary
        </h3>
        <div
          aria-labelledby="order-summary-heading"
          class="space-y-4"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-_r_3_"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-_r_2_"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-base text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    1 item in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-_r_2_"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-_r_3_"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-4 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                $39.67
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
          </div>
          <div
            class="space-y-4 w-full text-sm"
          >
            <div
              class="flex w-full justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Order Total
              </span>
              <span
                class="font-bold"
              >
                $41.56
              </span>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > MobileEmptyCart story renders and matches snapshot 1`] = `
<div>
  <div
    style="height: 100vh; background-color: rgb(240, 240, 240); padding: 20px;"
  >
    <div
      style="height: 80vh; background-color: white; margin-bottom: 20px; padding: 20px;"
    >
      <p>
        Content above the sticky checkout section
      </p>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
      data-slot="card"
    >
      <div
        class="p-6"
        data-slot="card-content"
      >
        <div
          class="space-y-5"
          data-testid="sf-order-summary"
        >
          <h3
            class="text-xl font-semibold tracking-tight text-left"
            id="order-summary-heading"
          >
            Summary
          </h3>
          <div
            aria-labelledby="order-summary-heading"
            class="space-y-4"
            role="region"
          >
            <div
              class="w-full"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class="border-b last:border-b-0"
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="closed"
              >
                <h3
                  class="flex"
                  data-orientation="vertical"
                  data-state="closed"
                >
                  <button
                    aria-controls="radix-_r_7_"
                    aria-expanded="false"
                    class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="closed"
                    id="radix-_r_6_"
                    type="button"
                  >
                    <span
                      class="flex-1 text-left text-base text-primary"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="21"
                          r="1"
                        />
                        <circle
                          cx="19"
                          cy="21"
                          r="1"
                        />
                        <path
                          d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                        />
                      </svg>
                      0 items in cart
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-_r_6_"
                  class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="closed"
                  hidden=""
                  id="radix-_r_7_"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                />
              </div>
            </div>
            <div
              class="space-y-4 text-sm"
            >
              <div
                class="flex justify-between items-center"
              >
                <span>
                  Subtotal
                </span>
                <span>
                  $0.00
                </span>
              </div>
              <div
                class="flex justify-between items-center"
              >
                <div
                  class="flex items-center"
                >
                  <span>
                    Shipping
                  </span>
                </div>
                <span
                  class="text-primary font-medium"
                >
                  FREE
                </span>
              </div>
              <div
                class="flex justify-between items-center"
              >
                <span>
                  Tax
                </span>
                <span>
                  $0.00
                </span>
              </div>
            </div>
            <div
              class="space-y-4 w-full text-sm"
            >
              <div
                class="flex w-full justify-between items-center"
              >
                <span
                  class="font-bold"
                >
                  Order Total
                </span>
                <span
                  class="font-bold"
                >
                  $0.00
                </span>
              </div>
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > MobileMultipleItems story renders and matches snapshot 1`] = `
<div>
  <div
    style="height: 100vh; background-color: rgb(240, 240, 240); padding: 20px;"
  >
    <div
      style="height: 80vh; background-color: white; margin-bottom: 20px; padding: 20px;"
    >
      <p>
        Content above the sticky checkout section
      </p>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
      data-slot="card"
    >
      <div
        class="p-6"
        data-slot="card-content"
      >
        <div
          class="space-y-5"
          data-testid="sf-order-summary"
        >
          <h3
            class="text-xl font-semibold tracking-tight text-left"
            id="order-summary-heading"
          >
            Summary
          </h3>
          <div
            aria-labelledby="order-summary-heading"
            class="space-y-4"
            role="region"
          >
            <div
              class="w-full"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class="border-b last:border-b-0"
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="closed"
              >
                <h3
                  class="flex"
                  data-orientation="vertical"
                  data-state="closed"
                >
                  <button
                    aria-controls="radix-_r_b_"
                    aria-expanded="false"
                    class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="closed"
                    id="radix-_r_a_"
                    type="button"
                  >
                    <span
                      class="flex-1 text-left text-base text-primary"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="21"
                          r="1"
                        />
                        <circle
                          cx="19"
                          cy="21"
                          r="1"
                        />
                        <path
                          d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                        />
                      </svg>
                      3 items in cart
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-_r_a_"
                  class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="closed"
                  hidden=""
                  id="radix-_r_b_"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                />
              </div>
            </div>
            <div
              class="space-y-4 text-sm"
            >
              <div
                class="flex justify-between items-center"
              >
                <span>
                  Subtotal
                </span>
                <span>
                  $73.57
                </span>
              </div>
              <div
                class="flex justify-between items-center"
              >
                <div
                  class="flex items-center"
                >
                  <span>
                    Shipping
                  </span>
                </div>
                <span
                  class="text-muted-foreground"
                >
                  TBD
                </span>
              </div>
              <div
                class="flex justify-between items-center"
              >
                <span>
                  Tax
                </span>
                <span
                  class="text-muted-foreground"
                >
                  TBD
                </span>
              </div>
            </div>
            <div
              class="space-y-4 w-full text-sm"
            >
              <div
                class="flex w-full justify-between items-center"
              >
                <span
                  class="font-bold"
                >
                  Order Total
                </span>
                <span
                  class="font-bold"
                >
                  $73.57
                </span>
              </div>
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > MobileWithItems story renders and matches snapshot 1`] = `
<div>
  <div
    style="height: 100vh; background-color: rgb(240, 240, 240); padding: 20px;"
  >
    <div
      style="height: 80vh; background-color: white; margin-bottom: 20px; padding: 20px;"
    >
      <p>
        Content above the sticky checkout section
      </p>
    </div>
    <div
      class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
      data-slot="card"
    >
      <div
        class="p-6"
        data-slot="card-content"
      >
        <div
          class="space-y-5"
          data-testid="sf-order-summary"
        >
          <h3
            class="text-xl font-semibold tracking-tight text-left"
            id="order-summary-heading"
          >
            Summary
          </h3>
          <div
            aria-labelledby="order-summary-heading"
            class="space-y-4"
            role="region"
          >
            <div
              class="w-full"
              data-orientation="vertical"
              data-slot="accordion"
            >
              <div
                class="border-b last:border-b-0"
                data-orientation="vertical"
                data-slot="accordion-item"
                data-state="closed"
              >
                <h3
                  class="flex"
                  data-orientation="vertical"
                  data-state="closed"
                >
                  <button
                    aria-controls="radix-_r_9_"
                    aria-expanded="false"
                    class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                    data-orientation="vertical"
                    data-radix-collection-item=""
                    data-slot="accordion-trigger"
                    data-state="closed"
                    id="radix-_r_8_"
                    type="button"
                  >
                    <span
                      class="flex-1 text-left text-base text-primary"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="8"
                          cy="21"
                          r="1"
                        />
                        <circle
                          cx="19"
                          cy="21"
                          r="1"
                        />
                        <path
                          d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                        />
                      </svg>
                      1 item in cart
                    </span>
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m6 9 6 6 6-6"
                      />
                    </svg>
                  </button>
                </h3>
                <div
                  aria-labelledby="radix-_r_8_"
                  class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                  data-orientation="vertical"
                  data-slot="accordion-content"
                  data-state="closed"
                  hidden=""
                  id="radix-_r_9_"
                  role="region"
                  style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
                />
              </div>
            </div>
            <div
              class="space-y-4 text-sm"
            >
              <div
                class="flex justify-between items-center"
              >
                <span>
                  Subtotal
                </span>
                <span>
                  $39.67
                </span>
              </div>
              <div
                class="flex justify-between items-center"
              >
                <div
                  class="flex items-center"
                >
                  <span>
                    Shipping
                  </span>
                </div>
                <span
                  class="text-muted-foreground"
                >
                  TBD
                </span>
              </div>
              <div
                class="flex justify-between items-center"
              >
                <span>
                  Tax
                </span>
                <span
                  class="text-muted-foreground"
                >
                  TBD
                </span>
              </div>
            </div>
            <div
              class="space-y-4 w-full text-sm"
            >
              <div
                class="flex w-full justify-between items-center"
              >
                <span
                  class="font-bold"
                >
                  Order Total
                </span>
                <span
                  class="font-bold"
                >
                  $41.56
                </span>
              </div>
            </div>
            <div
              class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
              data-orientation="horizontal"
              data-slot="separator"
              role="none"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > TabletView story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="space-y-5"
        data-testid="sf-order-summary"
      >
        <h3
          class="text-xl font-semibold tracking-tight text-left"
          id="order-summary-heading"
        >
          Summary
        </h3>
        <div
          aria-labelledby="order-summary-heading"
          class="space-y-4"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-_r_d_"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-_r_c_"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-base text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    1 item in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-_r_c_"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-_r_d_"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-4 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                $39.67
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
          </div>
          <div
            class="space-y-4 w-full text-sm"
          >
            <div
              class="flex w-full justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Order Total
              </span>
              <span
                class="font-bold"
              >
                $41.56
              </span>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CartSummarySection stories snapshot > WithoutProductMap story renders and matches snapshot 1`] = `
<div>
  <div
    class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl border py-6 shadow-sm"
    data-slot="card"
  >
    <div
      class="p-6"
      data-slot="card-content"
    >
      <div
        class="space-y-5"
        data-testid="sf-order-summary"
      >
        <h3
          class="text-xl font-semibold tracking-tight text-left"
          id="order-summary-heading"
        >
          Summary
        </h3>
        <div
          aria-labelledby="order-summary-heading"
          class="space-y-4"
          role="region"
        >
          <div
            class="w-full"
            data-orientation="vertical"
            data-slot="accordion"
          >
            <div
              class="border-b last:border-b-0"
              data-orientation="vertical"
              data-slot="accordion-item"
              data-state="closed"
            >
              <h3
                class="flex"
                data-orientation="vertical"
                data-state="closed"
              >
                <button
                  aria-controls="radix-_r_f_"
                  aria-expanded="false"
                  class="focus-visible:border-ring focus-visible:ring-ring/50 flex flex-1 items-start justify-between gap-4 rounded-md py-4 text-sm font-medium transition-all outline-none hover:underline focus-visible:ring-[3px] disabled:pointer-events-none disabled:opacity-50 [&[data-state=open]>svg]:rotate-180 text-left"
                  data-orientation="vertical"
                  data-radix-collection-item=""
                  data-slot="accordion-trigger"
                  data-state="closed"
                  id="radix-_r_e_"
                  type="button"
                >
                  <span
                    class="flex-1 text-left text-base text-primary"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-shopping-cart inline mr-2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="8"
                        cy="21"
                        r="1"
                      />
                      <circle
                        cx="19"
                        cy="21"
                        r="1"
                      />
                      <path
                        d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"
                      />
                    </svg>
                    1 item in cart
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down text-muted-foreground pointer-events-none size-4 shrink-0 translate-y-0.5 transition-transform duration-200"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </h3>
              <div
                aria-labelledby="radix-_r_e_"
                class="data-[state=closed]:animate-accordion-up data-[state=open]:animate-accordion-down overflow-hidden text-sm"
                data-orientation="vertical"
                data-slot="accordion-content"
                data-state="closed"
                hidden=""
                id="radix-_r_f_"
                role="region"
                style="--radix-accordion-content-height: var(--radix-collapsible-content-height); --radix-accordion-content-width: var(--radix-collapsible-content-width);"
              />
            </div>
          </div>
          <div
            class="space-y-4 text-sm"
          >
            <div
              class="flex justify-between items-center"
            >
              <span>
                Subtotal
              </span>
              <span>
                $39.67
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <div
                class="flex items-center"
              >
                <span>
                  Shipping
                </span>
              </div>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
            <div
              class="flex justify-between items-center"
            >
              <span>
                Tax
              </span>
              <span
                class="text-muted-foreground"
              >
                TBD
              </span>
            </div>
          </div>
          <div
            class="space-y-4 w-full text-sm"
          >
            <div
              class="flex w-full justify-between items-center"
            >
              <span
                class="font-bold"
              >
                Order Total
              </span>
              <span
                class="font-bold"
              >
                $41.56
              </span>
            </div>
          </div>
          <div
            class="bg-border shrink-0 data-[orientation=horizontal]:h-px data-[orientation=horizontal]:w-full data-[orientation=vertical]:h-full data-[orientation=vertical]:w-px w-full"
            data-orientation="horizontal"
            data-slot="separator"
            role="none"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
